tests/NormalTests/paczka1/fuzzy1/39744245.err
Error in line 1: S188 S650 361,2
Error in line 11: S188 S692 89,8
Error in line 4: WXcB8nXFR S692 28,4
Error in line 25: WXcB8nXFR S650 92,8
Error in line 27: WXcB8nXFR S188 44,0
